Fixed align items for Why We section

--- a/assets/sass/_whywe.sass
+++ b/assets/sass/_whywe.sass
@@ -19,7 +19,6 @@
       margin-bottom: 40px
    &-features
       display: flex
-      align-items: center
       justify-content: space-between
       flex-wrap: wrap
       &-item
